--- a/pom.xml
+++ b/pom.xml
@@ -34,16 +34,16 @@
     </dependency>
 
     <dependency>
-      <groupId>org.avaje.glue</groupId>
-      <artifactId>composite-junit</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <groupId>org.avaje.composite</groupId>
+      <artifactId>junit</artifactId>
+      <version>1.1</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>org.avaje.glue</groupId>
-      <artifactId>composite-logback</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <groupId>org.avaje.composite</groupId>
+      <artifactId>logback</artifactId>
+      <version>1.1</version>
       <scope>test</scope>
     </dependency>
 
