--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,18 @@
   </parent>
 
   <groupId>org.avaje.glue</groupId>
-  <artifactId>glue-config</artifactId>
+  <artifactId>glue-properties</artifactId>
   <version>1.1-SNAPSHOT</version>
 
   <properties>
     <slf4j-api.version>1.7.25</slf4j-api.version>
     <snakeyaml.version>1.21</snakeyaml.version>
   </properties>
+
+  <scm>
+    <developerConnection>scm:git:git@github.com:avaje-glue/glue-properties.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 
   <dependencies>
 
