--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -12,7 +10,7 @@
 
   <groupId>org.avaje.glue</groupId>
   <artifactId>glue-properties</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
 
   <properties>
     <slf4j-api.version>1.7.25</slf4j-api.version>
@@ -21,7 +19,7 @@
 
   <scm>
     <developerConnection>scm:git:git@github.com:avaje-glue/glue-properties.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>glue-properties-1.1</tag>
   </scm>
 
   <dependencies>
