--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.avaje.glue</groupId>
   <artifactId>glue-properties</artifactId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
 
   <properties>
     <slf4j-api.version>1.7.25</slf4j-api.version>
@@ -19,7 +19,7 @@
 
   <scm>
     <developerConnection>scm:git:git@github.com:avaje-glue/glue-properties.git</developerConnection>
-    <tag>glue-properties-1.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
